# online_place_recognition

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  readme.md
apps/: CMakeLists.txt
apps/cost_matrix_based_matching/: CMakeLists.txt  config_cost_matrix.yaml  cost_matrix_based_matching.cpp  readme.md
apps/create_cost_matrix/: CMakeLists.txt  config.yaml  create_cost_matrix.cpp  readme.md
apps/estimate_non_match_cost/: CMakeLists.txt  estimate_non_match_cost.cpp  match_example.txt  nonMatch_example.txt  non_match_cost_estimator.cpp  non_match_cost_estimator.h  readme.md
apps/feature_based_matching/: CMakeLists.txt  feature_based_matching.cpp  readme.md
doc/: online_place_recognition.conf
examples/: download_sample_data.sh  match_bonn_example.sh  match_freiburg_example.sh  matched_path.txt  readme.md
gtest/: CMakeLists.txt  DownloadProject.cmake
src/: CMakeLists.txt
src/database/: CMakeLists.txt  cost_matrix_database.cpp  cost_matrix_database.h  idatabase.h  list_dir.h  online_database.cpp  online_database.h
src/features/: CMakeLists.txt  feature.cpp  feature.h  feature_buffer.cpp  feature_buffer.h  feature_factory.cpp  feature_factory.h  ifeature.h  readme.md
src/online_localizer/: CMakeLists.txt  ilocvisualizer.h  online_localizer.cpp  online_localizer.h  path_element.cpp  path_element.h  priority_queue.cpp  priority_queue.h
src/successor_manager/: CMakeLists.txt  node.cpp  node.h  successor_manager.cpp  successor_manager.h
src/tools/: CMakeLists.txt
src/tools/config_parser/: CMakeLists.txt  config_parser.cpp  config_parser.h
src/tools/timer/: CMakeLists.txt  timer.cpp  timer.h
src/visualizer/: CMakeLists.txt  full_matrix_visualizer.cpp  full_matrix_visualizer.h  localization_viewer.cpp  localization_viewer.h  match_viewer.cpp  match_viewer.h  visualizer.cpp  visualizer.h
test/: database_test.cpp  feature_buffer_test.cpp  online_localizer_test.cpp  successor_manager_test.cpp
test/test_data/: cost_matrix.txt  cost_matrix_3_5.txt
test/test_data/query_features/: image_0-feature.txt  image_1-feature.txt  image_2-feature.txt  image_3-feature.txt
test/test_data/ref_features/: image_0-feature.txt  image_2-feature.txt  image_3-feature.txt
